# charlie-robot

./: .depend  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  car1-stock1.rgb  charlierobot.cpp  charlierobot.def  charlierobot.dsp  charlierobot.xml
charlie-robot/: CMakeLists.txt  cmake_install.cmake
charlie-robot/src/: ABS.h  Vec2d.h
data/absspeeddreamsdriver/: CMakeLists.txt  absspeeddreamsdriver.xml  default.xml
data/absspeeddreamsdriver/tracks/: lombaro.xml
data/absspeeddreamsdriver/trb1-cavallo-360rb/: brondehach.xml  def-norm.xml  def-slow.xml  karwada.xml
data/charlierobot/: CMakeLists.txt  charlierobot.xml  default.xml  logo.rgb
data/charlierobot/1/: skill.xml
data/charlierobot/tracks/: karwada.xml  street-1.xml
data/charlierobot/trb1-cavallo-360rb/: def-fast.xml  street-1.xml
src/: ABS.c  ABS.h  TCS.c  TCS.h  Vec3d.h  charlierobot.cpp  driver.cpp  readme.txt  tinyekf_config.h  torcs_or_sd.h  velocity_EKF.cpp  velocity_EKF.h
src/abs-speed-dreams-driver/: CMakeLists.txt
src/abs-speed-dreams-driver/src/: Vec2d.h  Vec3d.h  absspeeddreamsdriver.cpp  danpath.cpp  driver.cpp  driver.h  pit.h  torcs_or_sd.h
src/charlie-robot/: CMakeLists.txt
src/charlie-robot/src/: charlierobot.cpp  driver.cpp  pit.h
